# slc-control

./: .gitignore  README.md
firmware/: CMakeLists.txt  slc-control.ioc
firmware/cmake/: gcc-arm-none-eabi.cmake
firmware/slc-control/: .mxproject  CMakeLists.txt  slc-control.ioc  stm32g431cbtx_flash.ld
firmware/slc-control/App/Inc/: bitmap.h  font.h  gps.h  icm42688.h  nmea.h  str.h
firmware/slc-control/App/Src/: app.c  bitmap.c  display.c  font.c  gps.c  icm42688.c  lps22hh.c  memory.c  nmea.c  oled.c  qmc5883.c  str.c
firmware/slc-control/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
firmware/slc-control/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
firmware/slc-control/USB_Device/App/: usbd_cdc_if.c  usbd_desc.c
firmware/slc-control/cmake/stm32cubemx/: CMakeLists.txt
old/slc-control-lib/: .mxproject
old/slc-control-lib/USB_Device/App/: usbd_cdc_if.c  usbd_desc.c
old/slc-control/USB_Device/App/: usbd_cdc_if.c
